# rust-lambda-X-db

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
rust-aws-lambda/: Cargo.toml  makefile
rust-aws-lambda/src/: main.rs
