[package]
name = "rust-aws-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.10"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
rusoto_core = "0.48.0" # Use the latest version available
rusoto_dynamodb = "0.48.0" # Use the latest version available
openssl = { version = "0.10", features = ["vendored"] }
